Update success message text in index.html

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     <p>Escribe el código correcto para descubrir el tesoro</p>
     <input type="password" id="codeInput" maxlength="5" placeholder="•••••">
     <button id="submitBtn">Entrar</button>
-    <div class="message success" id="successMsg">¡Enhorabuena! El tesoro está en la habitación.</div>
+    <div class="message success" id="successMsg">¡Enhorabuena! El tesoro está en mi habitación.</div>
     <div class="message error" id="errorMsg">Código incorrecto, inténtalo de nuevo.</div>
     <div id="confetti" class="confetti"></div>
   </div>
